# Hobby_Basketball

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-25-basketball-ai-capcut-plugin.md
docs/superpowers/specs/: 2026-06-25-basketball-ai-capcut-plugin-design.md
src/hobby_basketball/: __init__.py  app.py  capcut_mate.py  clips.py  detector.py  evaluation.py  ffmpeg_export.py  models.py  review_sheet.py  trajectory.py  workspace.py
src/hobby_basketball/static/: index.html
tests/: test_app.py  test_capcut_mate.py  test_clips.py  test_detector.py  test_evaluation.py  test_ffmpeg_export.py  test_trajectory.py
