[project]
name = "hobby-basketball"
version = "0.1.0"
description = "Basketball made-shot highlight reel and CapCut/Jianying draft helper"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
  "requests>=2.32",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]
vision = ["opencv-python>=4.10", "numpy>=1.26", "ultralytics>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
